# nlp-engineer-assignment

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/nlp_engineer_assignment/: __init__.py  api.py  transformer.py  utils.py
tests/: test_utils.py
